@@ -15,6 +15,8 @@ Version history:
 - better handling of click callback
 - more compatible handling of attributes in patcher (hiding is now an option - define FLEXT_ATTRHIDE)
 - added header file flfeatures.h for compile-time detection of version-specific features
+- typed flext::NewAligned allocator
+- fixed severe Altivec bug (load unaligned)... thanks to Ian Ollmann
 
 0.5.0:
 - fixes for 64 bit builds (size_t is integer type of pointer size)
